--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		"email": "will@fullscreen.io"
 	}],
 	"require": {
-		"silverstripe/framework": "3.0.*",
-		"silverstripe/cms": "3.0.*"
+		"silverstripe/framework": ">=3.0.0",
+		"silverstripe/cms": ">=3.0.0"
 	}
 }
